# backend

./: .gitignore  Dockerfile  README.md  config.toml  pyproject.toml  video.py
app/: __init__.py  config.py  main.py  test.db
app/analysis/: __init__.py  fake_strategy.py  interface.py
app/analysis/analytics/: __init__.py  heuristic_functions.py  interface.py  util.py
app/analysis/main/: heuristic_functions.py  main.py  safe1.py  util.py
app/analysis/ml/: __init__.py
app/analysis/ml/native/: __init__.py  interface.py
app/analysis/strategies/: abstract_strategy.py  project_ai.py  stockfish.py  third_party_ai.py
app/api/: dependencies.py
app/api/middlewares/: logging_middleware.py
app/api/routes/: __init__.py  analysis.py  auth.py  game_content.py  games_managment.py  profile.py  tasks.py
app/core/: DTO.py  __init__.py  analysis_interface.py  config.py  models.py
app/core/analysis_base/: __init__.py  abstract_strategy.py  analysis_interface.py  chess_analyzer.py
app/core/pgn/: pgn_resolver.py
app/db/: __init__.py  connection.py  dependencies.py  repository.py  unit_of_work.py
app/db/crud/: __init__.py  game.py  highlight.py  task.py  user.py  video.py  video_segment.py
app/ml/: __init__.py  interface.py  third_party_analysis.py
app/ml/strategies/: __init__.py  third_party_ai.py
app/utils/: authentication.py  helpers.py  logging.py
app/video/: __init__.py  cut.py  download.py  video.py  video_cut.py
tests/: cock.py  test.http  test_database.py  video.py  video_cut.py  video_cut_async.py  video_cut_async_many.py
