[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["den4ik2975 <den41k2975@yandex.ru>"]
readme = "README.md"
packages = [{include = "app"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.38"
pydantic = "^2.10.6"
pydantic-settings = "^2.8.1"
loguru = "^0.7.3"
asyncpg = "^0.30.0"
aiosqlite = "^0.21.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
python-multipart = "^0.0.20"
python-chess = "^1.999"
g4f = "^0.4.8.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
