[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["den4ik2975 <den41k2975@yandex.ru>"]
readme = "README.md"
packages = [{include = "app"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.38"
pydantic = "^2.10.6"
pydantic-settings = "^2.8.1"
loguru = "^0.7.3"
asyncpg = "^0.30.0"
aiosqlite = "^0.21.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-jose = { extras = ["cryptography"], version = "^3.4.0" }
httpx = "^0.28.1"
bcrypt = "4.0.1"
numpy = "^2.2.4"
opencv-python = "^4.11.0.86"
chess = "^1.11.2"
g4f = "^0.4.9.8"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
